<resources>
    <string name="app_name">Facify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="faceify">Faceify</string>
    <string name="your_skin_health_matters">your skin health matters.....</string>
    <string name="boom">boom</string>
    <string name="face">face</string>
    <string name="bath">bath</string>
    <string name="body">body</string>
    <string name="skin">skin</string>
    <string name="hair">hair</string>
    <string name="beard">beard</string>
    <string name="make_up">make up</string>
    <string name="beauty">beauty</string>
    <string name="shave">shave</string>
    <string name="fragrance">fragrance</string>
    <string name="because_facify_cares">Because facify cares...</string>
    <string name="balle">balle</string>
    <string name="todo">TODO</string>
    <string name="face_wash">FACE WASH</string>
    <string name="face_serum">FACE SERUM</string>
    <string name="face_scrub">FACE SCRUB</string>
    <string name="face_cream">FACE CREAM</string>
    <string name="face_mask">FACE MASK</string>
    <string name="face_moisturizer">FACE MOISTURIZER</string>
    <string name="sunscreen">SUNSCREEN</string>
    <string name="face_gel">FACE GEL</string>
    <string name="lip_balm">LIP BALM</string>
    <string name="eye_care">EYE CARE</string>
    <string name="title_activity_bathscrub">bathscrub</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bodywash">Bodywash</string>
    <string name="bathingbar">bathingbar</string>
    <string name="bodyscrub">bodyscrub</string>
    <string name="button">Button</string>
    <string name="body_wash">body wash</string>
    <string name="bathing_bar">bathing bar</string>
    <string name="body_scrub">body scrub</string>
    <string name="body_lotion">body lotion</string>
    <string name="hand_cream">hand cream</string>
    <string name="hand_wash">hand wash</string>
    <string name="body_oil">body oil</string>
    <string name="lotions">lotions</string>
    <string name="hair_removal_cream">hair removal cream</string>
    <string name="tatto_care">tatto care</string>
    <string name="hair_oil">hair oil</string>
    <string name="shampoo">shampoo</string>
    <string name="conditioner">conditioner</string>
    <string name="hair_mask">hair mask</string>
    <string name="hair_serum">hair serum</string>
    <string name="scalp_brush">scalp brush</string>
    <string name="hair_spray">hair spray</string>
    <string name="scalp_scrub">scalp scrub</string>
    <string name="hair_growth_tonic">hair growth tonic</string>
    <string name="hair_wax">hair wax</string>
    <string name="toner">toner</string>
    <string name="under_eye_cream">under eye cream</string>
    <string name="sheet_face_mask">sheet face mask</string>
    <string name="face_oil">face oil</string>
    <string name="cleansing_butter">cleansing butter</string>
    <string name="peal_off_mask">peal off mask</string>
    <string name="beard_oil">beard oil</string>
    <string name="mustache_grow_oil">mustache grow oil</string>
    <string name="beard_growth_serum">beard growth serum</string>
    <string name="beard_wash">beard wash</string>
    <string name="beard_cream">beard cream</string>
    <string name="beard_wax">beard wax</string>
    <string name="beard_colour">beard colour</string>
    <string name="shave_gel">shave gel</string>
    <string name="shave_cream">shave cream</string>
    <string name="shaving_foam">shaving foam</string>
    <string name="after_shave">after shave</string>
    <string name="post_shave">post shave</string>
    <string name="trimmer">trimmer</string>
    <string name="facify" />
    <string name="facify2">Facify</string>
    <string name="share_to_others">share to others</string>
</resources>