<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.aditya.com/tools"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".faceActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:shadowColor="@color/black"
        android:text="@string/face_wash"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/face_scrub"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button12"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/face_serum"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button13"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/face_cream"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button12"
        app:layout_constraintStart_toStartOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button15"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/face_moisturizer"
        app:layout_constraintStart_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button20"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/sunscreen"
        app:layout_constraintEnd_toEndOf="@+id/button15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button21"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/face_gel"
        app:layout_constraintEnd_toEndOf="@+id/button20"
        app:layout_constraintStart_toStartOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button22"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/lip_balm"
        app:layout_constraintEnd_toEndOf="@+id/button21"
        app:layout_constraintStart_toStartOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button23"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/eye_care"
        app:layout_constraintEnd_toEndOf="@+id/button22"
        app:layout_constraintStart_toStartOf="@+id/button22"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button14"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:shadowColor="@color/black"
        android:text="@string/face_mask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button23"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

</androidx.constraintlayout.widget.ConstraintLayout>
