<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.aditya.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hairActivity">

    <Button
        android:id="@+id/button28"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/hair_oil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button31"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/shampoo"
        app:layout_constraintEnd_toEndOf="@+id/button28"
        app:layout_constraintStart_toStartOf="@+id/button28"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <Button
        android:id="@+id/button32"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/conditioner"
        app:layout_constraintEnd_toEndOf="@+id/button31"
        app:layout_constraintStart_toStartOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button31" />

    <Button
        android:id="@+id/button33"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/hair_mask"
        app:layout_constraintEnd_toEndOf="@+id/button32"
        app:layout_constraintStart_toStartOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

    <Button
        android:id="@+id/button34"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/hair_serum"
        app:layout_constraintEnd_toEndOf="@+id/button33"
        app:layout_constraintStart_toStartOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/button33" />

    <Button
        android:id="@+id/button36"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/hair_spray"
        app:layout_constraintEnd_toEndOf="@+id/button34"
        app:layout_constraintStart_toStartOf="@+id/button34"
        app:layout_constraintTop_toBottomOf="@+id/button34" />

    <Button
        android:id="@+id/button37"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/scalp_scrub"
        app:layout_constraintEnd_toEndOf="@+id/button36"
        app:layout_constraintStart_toStartOf="@+id/button36"
        app:layout_constraintTop_toBottomOf="@+id/button36" />

    <Button
        android:id="@+id/button38"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/hair_growth_tonic"
        app:layout_constraintEnd_toEndOf="@+id/button37"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button37"
        app:layout_constraintTop_toBottomOf="@+id/button37" />

    <Button
        android:id="@+id/button39"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/hair_wax"
        app:layout_constraintEnd_toEndOf="@+id/button38"
        app:layout_constraintStart_toStartOf="@+id/button38"
        app:layout_constraintTop_toBottomOf="@+id/button38" />
</androidx.constraintlayout.widget.ConstraintLayout>