<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.aditya.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bodyActivity2">

    <Button
        android:id="@+id/button24"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/body_lotion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button25"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/hand_cream"
        app:layout_constraintEnd_toEndOf="@+id/button24"
        app:layout_constraintStart_toStartOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button27"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/body_oil"
        app:layout_constraintStart_toStartOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <Button
        android:id="@+id/button29"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/hair_removal_cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button27"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/button30"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/tatto_care"
        app:layout_constraintStart_toStartOf="@+id/button29"
        app:layout_constraintTop_toBottomOf="@+id/button29" />
</androidx.constraintlayout.widget.ConstraintLayout>