<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.aditya.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShaveActivity">

    <Button
        android:id="@+id/button58"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/shave_gel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button59"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/shave_cream"
        app:layout_constraintEnd_toEndOf="@+id/button58"
        app:layout_constraintStart_toStartOf="@+id/button58"
        app:layout_constraintTop_toBottomOf="@+id/button58" />

    <Button
        android:id="@+id/button60"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/shaving_foam"
        app:layout_constraintEnd_toEndOf="@+id/button59"
        app:layout_constraintStart_toStartOf="@+id/button59"
        app:layout_constraintTop_toBottomOf="@+id/button59" />

    <Button
        android:id="@+id/button61"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/after_shave"
        app:layout_constraintEnd_toEndOf="@+id/button60"
        app:layout_constraintStart_toStartOf="@+id/button60"
        app:layout_constraintTop_toBottomOf="@+id/button60" />

    <Button
        android:id="@+id/button62"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/post_shave"
        app:layout_constraintEnd_toEndOf="@+id/button61"
        app:layout_constraintStart_toStartOf="@+id/button61"
        app:layout_constraintTop_toBottomOf="@+id/button61" />

    <Button
        android:id="@+id/button63"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/im_fell_double_pica"
        android:text="@string/trimmer"
        app:layout_constraintEnd_toEndOf="@+id/button62"
        app:layout_constraintStart_toStartOf="@+id/button62"
        app:layout_constraintTop_toBottomOf="@+id/button62" />
</androidx.constraintlayout.widget.ConstraintLayout>